--- a/wp-content/2024/9/styles/footer.css
+++ b/wp-content/2024/9/styles/footer.css
@@ -5,9 +5,10 @@
         align-items: center;
         justify-content: flex-start;
         margin: 0;
-        padding: 5px;
+        padding: 10px;
         background-color: #ffffff;
         gap: 20px;
+        border-top: 3px solid #e60000;
     }
     
     footer img {
@@ -41,6 +42,14 @@
 
     footer a:hover {
         text-decoration: underline;
+    }
+
+
+    .social-links {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        gap: 20px;
     }
 
     .social {
